Add RAG indexing notebooks, clean up.

--- a/notebooks/extract_page_information.ipynb
+++ b/notebooks/extract_page_information.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/study-permit/prepare/designated-learning-institutions-list/rocky-mountain-college']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,36 +92,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/study-permit-account\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/immigration-matters/growing-canada-future/business\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/imm0268\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/agri-food-pilot/work-permit\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/laws\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/cit0560\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/news/video/marriage-fraud-stories-victims\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/work-canada/permit/open-work-permit-hong-kong-recent-graduates/apply\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/imm0150\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/study-permit/prepare/designated-learning-institutions-list/rocky-mountain-college\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/corporate/partners-service-providers/funding/resettlement-assistance-program\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/cit0484\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/study-permit/prepare/designated-learning-institutions-list/ambrose-university\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/rural-northern-immigration-pilot/recommendation\n",
-      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/new-immigrants/prepare-life-canada/border-entry/bringing-goods\n"
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/corporate/mandate\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/study-permit/fmc-student-pilot/eligibility/participating-dlis\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/inadmissibility/reasons/medical-inadmissibility\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/corporate/publications-manuals/annual-reports-parliament-immigration\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/application-rehabilitation-inadmissible-persons-criminal-activity\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/imm5653\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/corporate/publications-manuals/operational-bulletins-manuals/standard-requirements/language-requirements/designated-testing-agencies\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/new-immigrants/pr-card/apply-renew-replace\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/corporate/publications-manuals/passport-program-annual-report-2017-2018\n",
+      "Extracting information from page:  https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/communications\n"
      ]
     }
    ],
    "source": [
-    "# Tags we care about\n",
+    "# Headers we care about\n",
     "valid_headers = ['h1', 'h2', 'h3', 'h4', 'h5', 'h6']\n",
     "\n",
     "CONTENT_START_HEADER_TEXT = \"You are here\"\n",
     "CONTENT_ENDS_HEADER_TEXT = \"Page details\"\n",
     "\n",
-    "#url_list= ['https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/agri-food-pilot/work-permit']\n",
     "\n",
-    "#url_list = [\"https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/laws\"]\n",
-    "\n",
-    "for url in url_list[0:25]:\n",
+    "for url in url_list[25:35]:\n",
     "    print (\"Extracting information from page: \", url)\n",
     "    # Fetch the content from the url\n",
     "    response = requests.get(url, headers=headers)\n",
@@ -202,7 +194,7 @@
     "    # Save clean extracted content in docs\n",
     "    page_name = url.split(\"https://www.canada.ca/en/\")[1]\n",
     "    page_name = \"_\".join(page_name.split(\"/\"))\n",
-    "    fw = open(f\"../data/{page_name}.txt\", \"w\")\n",
+    "    fw = open(f\"../data/docs/{page_name}.txt\", \"w\")\n",
     "    fw.write(f\"This is content for {url}\")\n",
     "\n",
     "    for section in content:\n",
@@ -214,41 +206,6 @@
     "            fw.write(f\"\\n {para}\")\n",
     "            \n",
     "    fw.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['https://www.canada.ca/en/immigration-refugees-citizenship/corporate/partners-service-providers/funding/resettlement-assistance-program',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/cit0484',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/study-permit/prepare/designated-learning-institutions-list/ambrose-university',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/rural-northern-immigration-pilot/recommendation',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/new-immigrants/prepare-life-canada/border-entry/bringing-goods',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/cit0302',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/imm0257',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/study-canada/study-permit/prepare/designated-learning-institutions-list/lasalle-college',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/housing/renting',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/imm5532',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/corporate/publications-manuals/quarterly-financial-report-quarter-ended-december-31-2014',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/immigration-matters/growing-canada-future/science-technology',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/francophone-immigration-outside-quebec/welcome/whitehorse',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/guide-5424-atlantic-immigration-pilot-program-atlantic-high-skilled-program',\n",
-       " 'https://www.canada.ca/en/immigration-refugees-citizenship/services/settle-canada/driving']"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "url_list[10:25]"
    ]
   },
   {
