--- a/notebooks/RAG_help_assistant.ipynb
+++ b/notebooks/RAG_help_assistant.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "### This notebook shows how to \n",
     "\n",
-    "##### 1. Build a RAG index and store in Faiss vectore database from raw documents folder\n",
+    "##### 1. Build a RAG index from raw documents folder and store in Faiss vector database \n",
     "##### 2. Query from RAG index\n",
     "##### 3. Demo of answers shared by LLM + RAG"
    ]
