--- a/notebooks/PromptTemplates_and_AgentTools.ipynb
+++ b/notebooks/PromptTemplates_and_AgentTools.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The capital of Canada is Ottawa.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_core.runnables import RunnableLambda\n",
     "from langchain_ollama import OllamaLLM\n",
@@ -44,9 +53,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_787516/2285740442.py:8: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+      "  chain = LLMChain(llm=llm, prompt=prompt)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'country': 'Canada', 'text': '\\nThe capital of Canada is Ottawa.'}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.chains import LLMChain\n",
@@ -64,9 +89,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'country': 'India', 'text': '\\nThe capital of India is New Delhi.'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Run the chain\n",
     "result = chain.invoke(\"India\")\n",
@@ -75,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'country': 'US', 'text': '\\nThe capital of the United States is Washington, D.C. (District of Columbia).'}\n"
+     ]
+    }
+   ],
    "source": [
     "result = chain.invoke(\"US\")\n",
     "print(result)"
@@ -92,9 +133,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_787516/496600779.py:22: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"llama2\")\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.agents import initialize_agent, Tool, AgentType\n",
     "from langchain_community.llms import Ollama\n",
@@ -130,9 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_787516/1239551101.py:1: LangChainDeprecationWarning: LangChain agents will continue to be supported, but it is recommended for new use cases to be built with LangGraph. LangGraph offers a more flexible and full-featured framework for building agents, including support for tool-calling, persistence of state, and human-in-the-loop workflows. For details, refer to the `LangGraph documentation <https://langchain-ai.github.io/langgraph/>`_ as well as guides for `Migrating from AgentExecutor <https://python.langchain.com/docs/how_to/migrate_agent/>`_ and LangGraph's `Pre-built ReAct agent <https://langchain-ai.github.io/langgraph/how-tos/create-react-agent/>`_.\n",
+      "  agent = initialize_agent(\n"
+     ]
+    }
+   ],
    "source": [
     "agent = initialize_agent(\n",
     "    tools=[get_squared_tool],\n",
@@ -154,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +222,7 @@
        "'225'"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +323,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " Hey there! So, you know how we multiplied 15 by itself? Well, when you multiply a number by itself, the result is always going to be bigger than the original number! Isn't that cool? So, in this case, 15 multiplied by itself equals 225. That means that 15 squared is equal to 225! Pretty neat, right?\n"
+      " Hey there! So, you know how we've been learning about square numbers and stuff? Well, today we're gonna talk about something really cool - squares of numbers! That's right, I'm talking about when you take a number and multiply it by itself, like 15 x 15 = 225. It's like magic, right? You start with one number, and then you make it bigger and bigger just by multiplying it by itself! Isn't that awesome? 😍\n"
      ]
     }
    ],
