update notebook to show how prompt updating fixes wrong calculations

--- a/notebooks/ApplicationFeesCalculator.ipynb
+++ b/notebooks/ApplicationFeesCalculator.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -134,8 +134,7 @@
      "output_type": "stream",
      "text": [
       "/home/nausheenfatma/.cache/pypoetry/virtualenvs/canadaimmigrationhelpdesk-usinggenai-s0qUKeX3-py3.12/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Xet Storage is enabled for this repo, but the 'hf_xet' package is not installed. Falling back to regular HTTP download. For better performance, install the package with: `pip install huggingface_hub[hf_xet]` or `pip install hf_xet`\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Load documents\n",
     "#documents = SimpleDirectoryReader('path/to/docs').load_data()\n",
@@ -207,21 +214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['This is content for https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/express-entry',\n",
-       " 'You are here:\\n - Canada.ca\\n - Immigration and citizenship\\n - Immigrate to Canada',\n",
-       " \"Express Entry\\n \\nExpress Entry is an online system that we use to manage immigration applications from skilled workers.\\n \\nThere are 3 immigration programs managed through Express Entry:\\n - Canadian Experience Class\\n - Federal Skilled Worker Program\\n - Federal Skilled Trades Program\\n \\nHow the Express Entry process works:\\n - Create a profile and enter the pool.\\n - We'll invite the candidates with the most points in rounds.\\n - If you're invited to apply, fill out the application.\\n - We'll review your application and make a decision.\",\n",
-       " 'Processing times\\n \\nVaries by program (Refer page: /en/immigration-refugees-citizenship/services/application/check-processing-times.html)',\n",
-       " 'Fees\\n \\nYour application: $CAN\\xa01,525\\n \\nFees for your family members:\\n - Spouse: $CAN\\xa01,525\\n - Dependent child: $CAN\\xa0260',\n",
-       " 'Sections\\n \\nWho can apply: \\n \\nCheck your score: \\n \\nGet your documents ready: \\n \\nCreate your profile: \\n \\nRounds of invitations: \\n \\nApply for permanent residence: \\n \\nAfter you apply: \\n \\nIf we approve your application:']"
+       "[TextNode(id_='d978bbf2-8028-4db2-a5e4-9ee6702c5084', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text='This is content for https://www.canada.ca/en/immigration-refugees-citizenship/services/immigrate-canada/express-entry', mimetype='text/plain', start_char_idx=None, end_char_idx=None, metadata_seperator='\\n', text_template='{metadata_str}\\n\\n{content}'),\n",
+       " TextNode(id_='393374aa-16ce-426c-b729-a8d23db410d8', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text='You are here:\\n - Canada.ca\\n - Immigration and citizenship\\n - Immigrate to Canada', mimetype='text/plain', start_char_idx=None, end_char_idx=None, metadata_seperator='\\n', text_template='{metadata_str}\\n\\n{content}'),\n",
+       " TextNode(id_='f9444559-3d08-4c2c-a90d-6babc3b5bfd3', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text=\"Express Entry\\n \\nExpress Entry is an online system that we use to manage immigration applications from skilled workers.\\n \\nThere are 3 immigration programs managed through Express Entry:\\n - Canadian Experience Class\\n - Federal Skilled Worker Program\\n - Federal Skilled Trades Program\\n \\nHow the Express Entry process works:\\n - Create a profile and enter the pool.\\n - We'll invite the candidates with the most points in rounds.\\n - If you're invited to apply, fill out the application.\\n - We'll review your application and make a decision.\", mimetype='text/plain', start_char_idx=None, end_char_idx=None, metadata_seperator='\\n', text_template='{metadata_str}\\n\\n{content}'),\n",
+       " TextNode(id_='95c66df3-a0fb-4484-ab04-0d7dfd872546', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text='Processing times\\n \\nVaries by program (Refer page: /en/immigration-refugees-citizenship/services/application/check-processing-times.html)', mimetype='text/plain', start_char_idx=None, end_char_idx=None, metadata_seperator='\\n', text_template='{metadata_str}\\n\\n{content}'),\n",
+       " TextNode(id_='71f797bc-f641-4e8e-a638-60d5fc80baaf', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text='Fees\\n \\nYour application: $CAN\\xa01,525\\n \\nFees for your family members:\\n - Spouse: $CAN\\xa01,525\\n - Dependent child: $CAN\\xa0260', mimetype='text/plain', start_char_idx=None, end_char_idx=None, metadata_seperator='\\n', text_template='{metadata_str}\\n\\n{content}'),\n",
+       " TextNode(id_='ac2375f0-b0f1-423b-922b-f25f22c2ff1d', embedding=None, metadata={}, excluded_embed_metadata_keys=[], excluded_llm_metadata_keys=[], relationships={}, metadata_template='{key}: {value}', metadata_separator='\\n', text='Sections\\n \\nWho can apply: \\n \\nCheck your score: \\n \\nGet your documents ready: \\n \\nCreate your profile: \\n \\nRounds of invitations: \\n \\nApply for permanent residence: \\n \\nAfter you apply: \\n \\nIf we approve your application:', mimetype='text/plain', start_char_idx=None, end_char_idx=None, metadata_seperator='\\n', text_template='{metadata_str}\\n\\n{content}')]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,12 +265,7 @@
     "# Query function\n",
     "def query_rag_system(question):\n",
     "    retrieved_docs = retriever.retrieve(question)\n",
-    "    print (\"retrived nodes: \")\n",
     "    context = \"\\n\".join([doc.text for doc in retrieved_docs]) \n",
-    "    for doc in retrieved_docs:\n",
-    "        print (doc)\n",
-    "        print (\"----------------\")\n",
-    "       \n",
     "    prompt = f\"Context:\\n{context}\\n\\n Question: {question}\\n\\n\\n\\nAnswer:\"\n",
     "    response = llm.complete(prompt)\n",
     "    return response"
@@ -271,33 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrived nodes: \n",
-      "Node ID: 68b89711-b98e-410d-90cf-baa63b2be82d\n",
-      "Text: Fees   Your application: $CAN 1,525   Fees for your family\n",
-      "members:  - Spouse: $CAN 1,525  - Dependent child: $CAN 260\n",
-      "Score:  0.765\n",
-      "\n",
-      "----------------\n",
-      "Node ID: a70a0fed-c6c3-4399-94c9-21148ab34c34\n",
-      "Text: Sections   Who can apply:    Check your score:    Get your\n",
-      "documents ready:    Create your profile:    Rounds of invitations:\n",
-      "Apply for permanent residence:    After you apply:    If we approve\n",
-      "your application:\n",
-      "Score:  1.473\n",
-      "\n",
-      "----------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response = query_rag_system(\"application fees\")"
+    "response = query_rag_system(\"I have 3 dependent children and a spouse. How much will be my total applications fees?\")"
    ]
   },
   {
@@ -308,7 +288,7 @@
     {
      "data": {
       "text/plain": [
-       "\"The fee for applying through the Express Entry system is $CAN\\xa01,525. This fee applies to each applicant, including the primary applicant and any accompanying family members.\\n\\nThere are additional fees for family members, including:\\n\\n* Spouse: $CAN\\xa01,525\\n* Dependent child: $CAN\\xa0260\\n\\nIt's important to note that these fees are subject to change, so it's best to check the official government website for the most up-to-date information.\""
+       "'The total fee for your application, including your spouse and three dependent children, would be $CAN 1,525 + ($CAN 260 x 3) = $CAN 4,385.'"
       ]
      },
      "execution_count": 12,
@@ -322,89 +302,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrived nodes: \n",
-      "Node ID: 68b89711-b98e-410d-90cf-baa63b2be82d\n",
-      "Text: Fees   Your application: $CAN 1,525   Fees for your family\n",
-      "members:  - Spouse: $CAN 1,525  - Dependent child: $CAN 260\n",
-      "Score:  0.267\n",
-      "\n",
-      "----------------\n",
-      "Node ID: a70a0fed-c6c3-4399-94c9-21148ab34c34\n",
-      "Text: Sections   Who can apply:    Check your score:    Get your\n",
-      "documents ready:    Create your profile:    Rounds of invitations:\n",
-      "Apply for permanent residence:    After you apply:    If we approve\n",
-      "your application:\n",
-      "Score:  1.439\n",
-      "\n",
-      "----------------\n"
-     ]
-    }
-   ],
-   "source": [
-    "response = query_rag_system(\"I have 3 dependent children and a spouse. How much will be my total applications fees?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The total application fees for your family of five (3 dependent children and a spouse) would be $CAN\\xa02,485. This is calculated as follows:\\n\\n* Your application fee: $CAN\\xa01,525\\n* Fees for your spouse: $CAN\\xa01,525\\n* Fees for each dependent child: $CAN\\xa0260 x 3 = $CAN\\xa0780\\n\\nTotal fees: $CAN\\xa02,485.'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrived nodes: \n",
-      "Node ID: 68b89711-b98e-410d-90cf-baa63b2be82d\n",
-      "Text: Fees   Your application: $CAN 1,525   Fees for your family\n",
-      "members:  - Spouse: $CAN 1,525  - Dependent child: $CAN 260\n",
-      "Score:  0.509\n",
-      "\n",
-      "----------------\n",
-      "Node ID: a70a0fed-c6c3-4399-94c9-21148ab34c34\n",
-      "Text: Sections   Who can apply:    Check your score:    Get your\n",
-      "documents ready:    Create your profile:    Rounds of invitations:\n",
-      "Apply for permanent residence:    After you apply:    If we approve\n",
-      "your application:\n",
-      "Score:  1.254\n",
-      "\n",
-      "----------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = query_rag_system(\"I am applying for myself and my spouse. How much will be my total applications fees?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +320,7 @@
        "'Based on the information provided in the context, if you are applying for yourself and your spouse, the total application fees would be $CAN 1,525 + $CAN 1,525 = $CAN 3,050.'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,53 +331,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "retrived nodes: \n",
-      "Node ID: 68b89711-b98e-410d-90cf-baa63b2be82d\n",
-      "Text: Fees   Your application: $CAN 1,525   Fees for your family\n",
-      "members:  - Spouse: $CAN 1,525  - Dependent child: $CAN 260\n",
-      "Score:  0.456\n",
-      "\n",
-      "----------------\n",
-      "Node ID: a70a0fed-c6c3-4399-94c9-21148ab34c34\n",
-      "Text: Sections   Who can apply:    Check your score:    Get your\n",
-      "documents ready:    Create your profile:    Rounds of invitations:\n",
-      "Apply for permanent residence:    After you apply:    If we approve\n",
-      "your application:\n",
-      "Score:  1.500\n",
-      "\n",
-      "----------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = query_rag_system(\"I am a single mother with 1 child. How much is my application fees.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Based on the information provided in the context, the application fee for a single mother with one child is $CAN 1,525. This is the same as the application fee for the main applicant. The fees for the family members are as follows:\\n\\n* Spouse: $CAN 1,525\\n* Dependent child: $CAN 260\\n\\nSo, the total application fee for a single mother with one child would be $CAN 1,525 + $CAN 260 = $CAN 1,785.'"
+       "'Based on the information provided in the context, your application fee as a single mother with one child would be $CAN 1,525. This is the same amount as the application fee for a spouse or common-law partner, as well as the fee for each dependent child. Therefore, your application fee would be $CAN 1,525.'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# above example failed. rewrite prompt \n",
+    "response = query_rag_system(\"I am a single mother with 1 dependent child. How much is my application fees.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Based on the information provided in the context, the application fee for a single mother with one dependent child is $CAN 1,525. This is the same as the application fee for a family of three or more members.'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Based on the information provided in the context, the total application fee for a mother applying for herself and one dependent child would be $CAN 1,525 + $CAN 260 = $CAN 1,785.'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the above two answers gave wrong output, fix prompts.\n",
+    "\n",
+    "response = query_rag_system(\"I am a mother applying for myself and 1 dependent child. How much is my total application fees.\")\n",
+    "response.text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above exercise shows that building cutom tool for simple mathematical problems can largely be handled using the LLMs directly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### When do we really need to build custom tools then?\n",
+    "\n",
+    "You should consider building your own custom agent tool when:\n",
+    "\n",
+    "- You need access to a specific API, database, or system\n",
+    "E.g., querying a proprietary dataset, scraping a niche website, or interacting with a custom backend service.\n",
+    "\n",
+    "- You want to encapsulate complex business logic\n",
+    "If the logic is too domain-specific (e.g., insurance claim validation or NLP over legal documents), custom tools help abstract and reuse that logic.\n",
+    "\n",
+    "- Built-in tools don't cover your use case\n",
+    "You might need to integrate with IoT devices, internal microservices, or specialized hardware.\n",
+    "\n",
+    "- You need control over latency or caching\n",
+    "Some tasks may benefit from local caching, retry logic, or rate limiting—these can be handled inside a custom tool.\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Do Mathematical Operations Require Tools?\n",
+    "Simple math operations (like 2 + 2, or sqrt(16)) do not require tools—LLMs can usually handle them.\n",
+    "\n",
+    "But you should use a tool when:\n",
+    "\n",
+    "- You need precision math or long-form calculations (e.g., compound interest, probability calculations, matrix ops).\n",
+    "\n",
+    "- You want to use NumPy, SymPy, or SciPy.\n",
+    "\n",
+    "- You need math inside a reasoning chain (e.g., the result feeds into another decision)."
    ]
   }
  ],
