clean up, update poetry files

--- a/notebooks/AgentTools_and_Routers.ipynb
+++ b/notebooks/AgentTools_and_Routers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Thsi notebook shows how to write simple Prompt templates custom Agent tools using Langchain"
+    "### Thsi notebook shows how to write simple Prompt templates, custom Agent tools using Langchain and how Routing works"
    ]
   },
   {
