add langchain vs  langraph examples via notebooks

--- a/notebooks/AgentTools_and_Routers.ipynb
+++ b/notebooks/AgentTools_and_Routers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Thsi notebook shows how to write simple Prompt templates, custom Agent tools using Langchain and how Routing works"
+    "### This notebook shows how to write simple Prompt templates, custom Agent tools using Langchain and how Routing works"
    ]
   },
   {
@@ -511,6 +511,85 @@
     "# --- Run It ---\n",
     "response = agent.run(\"What's the capital of Canada?\")\n",
     "print(\"\\n✅ Final Answer:\", response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mI can help you with that!\n",
+      "\n",
+      "Tokyo is in Japan Standard Time (JST), which is UTC+9. To get the current time in Tokyo, we need to add 13 hours to your Eastern Standard Time (EST) since there's a 5-hour difference.\n",
+      "\n",
+      "As I'm responding to you, it's:\n",
+      "\n",
+      "* 12:00 PM EST (your local time)\n",
+      "* 1:00 AM JST (in Tokyo)\n",
+      "\n",
+      "Please note that Japan does not observe daylight saving time, so the UTC offset remains constant throughout the year.\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "I can help you with that!\n",
+      "\n",
+      "Tokyo is in Japan Standard Time (JST), which is UTC+9. To get the current time in Tokyo, we need to add 13 hours to your Eastern Standard Time (EST) since there's a 5-hour difference.\n",
+      "\n",
+      "As I'm responding to you, it's:\n",
+      "\n",
+      "* 12:00 PM EST (your local time)\n",
+      "* 1:00 AM JST (in Tokyo)\n",
+      "\n",
+      "Please note that Japan does not observe daylight saving time, so the UTC offset remains constant throughout the year.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain_core.tools import tool\n",
+    "from langchain_community.chat_models import ChatOllama\n",
+    "from langchain.agents import initialize_agent, AgentType\n",
+    "#from langchain_openai import ChatOpenAI\n",
+    "import datetime\n",
+    "\n",
+    "# 1. Define a custom tool (function)\n",
+    "@tool\n",
+    "def get_current_time(city: str) -> str:\n",
+    "    \"\"\"Returns the current time in a given city.\"\"\"\n",
+    "    # You can add actual timezone support with pytz/zoneinfo if needed\n",
+    "    now = datetime.datetime.now()\n",
+    "    return f\"The current time in {city} is {now.strftime('%Y-%m-%d %H:%M:%S')}\"\n",
+    "\n",
+    "# 2. Initialize the language model\n",
+    "#llm = ChatOpenAI(model=\"gpt-4\", temperature=0)\n",
+    "# --- LLM from Ollama ---\n",
+    "llm = ChatOllama(model=\"llama3\")  # or \"mistral\", \"llama2\", etc.\n",
+    "\n",
+    "# 3. Initialize the agent with the tool\n",
+    "agent = initialize_agent(\n",
+    "    tools=[get_current_time],\n",
+    "    llm=llm,\n",
+    "    agent=AgentType.OPENAI_FUNCTIONS,\n",
+    "    verbose=True,\n",
+    ")\n",
+    "\n",
+    "# 4. Run the agent\n",
+    "response = agent.run(\"What is the exact current time in Tokyo? I am currently located in EST time zone\")\n",
+    "print(response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adding pydantic"
    ]
   }
  ],
